@@ -56,6 +56,8 @@ django-celery-email = "*"
 "xhtml2pdf" = "*"
 pisa = "*"
 django-crispy-forms = "*"
+django-adminactions = "*"
+django-dbtemplates = "*"
 
 [dev-packages]
 "flake8" = ">=3.6.0"
